# AgentOrch

./: .env.example  .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.claude/: settings.local.json
crates/agentos-cli/: Cargo.toml
crates/agentos-cli/src/: main.rs  slash.rs
crates/agentos-cli/workspace/tasks/cli-run-1/: task.toml
crates/agentos-cli/workspace/tasks/cli-run-1/sessions/: cli-run-1-resume-6.jsonl  cli-run-1.jsonl
crates/agentos-cli/workspace/tasks/run-cli-resume/: task.toml
crates/agentos-cli/workspace/tasks/run-cli-resume/sessions/: run-cli-resume-resume-0.jsonl
crates/agentos-core/: Cargo.toml
crates/agentos-core/benches/: loop_overhead.rs
crates/agentos-core/src/: config.rs  http.rs  lib.rs  runner.rs  task_workspace.rs  trace.rs
crates/agentos-core/src/approve/: mod.rs
crates/agentos-core/src/channels/: attachments.rs  feishu.rs  mod.rs  telegram.rs  text.rs
crates/agentos-core/src/channels/feishu/: long_connection.rs  mod.rs  websocket.rs
crates/agentos-core/src/config/: mod.rs  subagents.rs
crates/agentos-core/src/crons/: mod.rs
crates/agentos-core/src/gateway/: mod.rs
crates/agentos-core/src/guardrails/: mod.rs
crates/agentos-core/src/hooks/: mod.rs
crates/agentos-core/src/loop/: approval.rs  delegate.rs  escalate.rs  items.rs  mod.rs  telemetry.rs
crates/agentos-core/src/memory/: accounting.rs  authorize.rs  hybrid.rs  in_memory.rs  mod.rs  qdrant.rs  reflection.rs  scope.rs  sqlite.rs  sqlite_vec.rs
crates/agentos-core/src/orchestrator/: commands.rs  max.rs  min.rs  mod.rs  routing.rs
crates/agentos-core/src/runner/: episodes.rs
crates/agentos-core/src/runtime/: mod.rs  tools_config.rs
crates/agentos-core/src/skills/: mod.rs  skill_creator.rs  web_research.rs  workspace.rs
crates/agentos-core/src/subagents/: mod.rs
crates/agentos-core/src/tools/: builtin.rs  mcp.rs  memory.rs  mod.rs  registry.rs
crates/agentos-core/src/tools/builtin/: common.rs  file.rs  mod.rs  skill_create.rs  skill_validate.rs
crates/agentos-interfaces/: Cargo.toml
crates/agentos-interfaces/src/: channel.rs  guardrail.rs  lib.rs  mcp.rs  memory.rs  orchestrator.rs  run_state.rs  session.rs  skill.rs  test_support.rs  tool.rs
crates/agentos-llm/: Cargo.toml
crates/agentos-llm/src/: env.rs  lib.rs
crates/agentos-llm/src/providers/: anthropic.rs  content.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs
crates/agentos-proto/: Cargo.toml
crates/agentos-proto/src/: envelope.rs  ids.rs  lib.rs  message.rs  tool.rs  trace.rs  usage.rs
docs/: ARCHITECTURE.md  FEEDBACK.md  INSTALL.md  MEMORY_SYSTEM_DEVELOPMENT_PLAN.md  PLAN.md  RELEASE_NOTES.md  SKILLS.md  USER_GUIDE.md  agent-os-development-plan.md  memory_system_design.md
scripts/: bootstrap-agentos.sh  check-import-boundaries.sh  check-module-size.sh  install-agentos.sh  install-toolchain.sh  package-release.sh  start-agentos.sh
tests/: gateway_pipeline.py  test_tasks.json
workspace/: agent.toml
workspace/skills/audit-skill/: SKILL.md
workspace/skills/skill-creator/: SKILL.md
workspace/skills/skill-creator/references/: agentos.md
workspace/subagents/: codereview-subagent.toml  edit-subagent.toml  general-subagent.toml  research-subagent.toml  skill-editor-subagent.toml
workspace/suborchs/: content-ops.toml  research.toml  software-dev.toml
