[package]
name = "agentos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentos-core.workspace = true
agentos-interfaces.workspace = true
agentos-llm.workspace = true
agentos-proto.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
