[package]
name = "agentos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentos-interfaces.workspace = true
agentos-llm.workspace = true
agentos-proto.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "http2"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
agentos-interfaces = { workspace = true, features = ["test-support"] }
criterion = "0.5"

[[bench]]
name = "loop_overhead"
harness = false
